--- a/src/View/MainWindow.xaml
+++ b/src/View/MainWindow.xaml
@@ -1,92 +1,71 @@
-﻿<Window x:Class="View.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View"
+        x:Class="View.MainWindow"
         mc:Ignorable="d"
-        Title="Contacts" Height="450" Width="800" Icon="Resource/icon.ico">
+        Title="Contacts" Height="450" Width="800" Icon="Resource/Icon.ico">
     <Window.Resources>
-        <Style TargetType="Panel">
-            <Setter Property="Background" Value="#222"></Setter>
-        </Style>
-        <Style BasedOn="{StaticResource {x:Type Panel}}" TargetType="DockPanel"></Style>
-        <Style BasedOn="{StaticResource {x:Type Panel}}" TargetType="StackPanel"></Style>
-        <Style BasedOn="{StaticResource {x:Type Panel}}" TargetType="Grid"></Style>
-        <Style TargetType="Control">
-            <Setter Property="Margin" Value="3px"></Setter>
-            <Setter Property="Background" Value="#222"></Setter>
-            <Setter Property="Foreground" Value="White"></Setter>
-            <Setter Property="BorderBrush" Value="White"></Setter>
-        </Style>
-        <Style BasedOn="{StaticResource {x:Type Control}}" TargetType="GroupBox"></Style>
-        <Style BasedOn="{StaticResource {x:Type Control}}" TargetType="Button">
-            <Setter Property="Width" Value="75"></Setter>
-            <Setter Property="Height" Value="25"></Setter>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" BorderBrush="White"
-                                BorderThickness="1">
-                            <ContentPresenter HorizontalAlignment="Center"
-                                              VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="RoyalBlue"></Setter>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style BasedOn="{StaticResource {x:Type Control}}" TargetType="TextBox"></Style>
-        <Style BasedOn="{StaticResource {x:Type Control}}" TargetType="Label">
-            <Setter Property="Padding" Value="1px"></Setter>
-        </Style>
-        <Style BasedOn="{StaticResource {x:Type Label}}" TargetType="Label" x:Key="BoldLabel">
-            <Setter Property="FontWeight" Value="Bold"></Setter>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resource/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Window.Resources>
-    <DockPanel>
-        <Grid Margin="15,15,15,15">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <GroupBox Grid.Row="0" Grid.Column="0" Header="Edit contact">
-                <StackPanel>
-                    <Label>Name:</Label>
-                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Label>Phone number:</Label>
-                    <TextBox Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Label>Email:</Label>
-                    <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
-                </StackPanel>
-            </GroupBox>
-            <GridSplitter Grid.Column="1"></GridSplitter>
-            <GroupBox Grid.Row="0" Grid.Column="2" Header="Read contact">
-                <StackPanel>
-                    <Label>Name:</Label>
-                    <Label Style="{StaticResource BoldLabel}" Content="{Binding Name}"/>
-                    <Label>Phone number:</Label>
-                    <Label Style="{StaticResource BoldLabel}" Content="{Binding PhoneNumber}"/>
-                    <Label>Email:</Label>
-                    <Label Style="{StaticResource BoldLabel}" Content="{Binding Email}"/>
-                </StackPanel>
-            </GroupBox>
-            <GridSplitter Grid.Row="1"></GridSplitter>
-            <WrapPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"
-                       HorizontalAlignment="Right">
-                <Button Content="Save" Command="{Binding SaveCommand}"/>
-                <Button Content="Load" Command="{Binding LoadCommand}"/>
-            </WrapPanel>
+    <Grid Background="#222">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Background="#333">
+            <DockPanel Margin="5px" LastChildFill="True" >
+                <Grid DockPanel.Dock="Top">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0">Find:</Label>
+                    <TextBox Grid.Column="1"/>
+                </Grid>
+                <WrapPanel DockPanel.Dock="Bottom" HorizontalAlignment="Center">
+                    <Button Content="Add"/>
+                    <Button Content="Edit"/>
+                    <Button Content="Remove"/>
+                </WrapPanel>
+                <ListBox ItemsSource="{Binding Contacts}"
+                         SelectedItem="{Binding SelectedContact}"/>
+            </DockPanel>
         </Grid>
-    </DockPanel>
+        <GridSplitter Grid.Column="1" Width="10px" BorderThickness="1px, 0, 1px, 0"
+                      BorderBrush="#AAA"/>
+        <Grid Grid.Column="2" Grid.ColumnSpan="3" Margin="5px">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Column="0" Grid.Row="0" Height="125px" Width="125px" Margin="10px"
+                    BorderThickness="1px" BorderBrush="White">
+                <Image Source="Resource/Avatar.jpg"/>
+            </Border>
+            <StackPanel Grid.Column="1" Grid.Row="0">
+                <Label Content="Name:"/>
+                <TextBox Text="{Binding TempContact.Name,
+                    UpdateSourceTrigger=PropertyChanged}"/>
+                <Label Content="Phone number:"/>
+                <TextBox Text="{Binding TempContact.PhoneNumber,
+                    UpdateSourceTrigger=PropertyChanged}"/>
+                <Label Content="Email:"/>
+                <TextBox Text="{Binding TempContact.Email,
+                    UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
+            <Button Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Content="Apply"
+                    VerticalAlignment="Top" Margin="3, 10, 3, 3"/>
+        </Grid>
+    </Grid>
 </Window>
