--- a/src/View/Control/ContactControl.xaml
+++ b/src/View/Control/ContactControl.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="View.Views.ContactControl"
+﻿<UserControl x:Class="View.Control.ContactControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:local="clr-namespace:View.Views"
+             xmlns:local="clr-namespace:View.Control"
+             xmlns:behavior="clr-namespace:View.Behavior"
              mc:Ignorable="d"
              Name="contactControl"
              d:DesignHeight="150" d:DesignWidth="300">
@@ -13,7 +14,6 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Resource/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <local:TextCompositionEventArgsConverter x:Key="TextCompositionEventArgsConverter"/>
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -36,23 +36,8 @@
             <TextBox IsReadOnly="{Binding ElementName=contactControl, Path=IsReadOnly}"
                      Text="{Binding ElementName=contactControl, Path=Contact.PhoneNumber,
                      UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="PreviewTextInput">
-                        <i:InvokeCommandAction Command="{Binding Path=PhoneNumberTextInputCommand,
-                                   ElementName=contactControl}" EventArgsConverter="{StaticResource
-                                   TextCompositionEventArgsConverter}"
-                                   PassEventArgsToCommand="True"/>
-                    </i:EventTrigger>
-                    <i:EventTrigger EventName="ObjectData.Pasting">
-                        <i:InvokeCommandAction Command="{Binding Path=PhoneNumberTextInputCommand,
-                                   ElementName=contactControl}" EventArgsConverter="{StaticResource
-                                   TextCompositionEventArgsConverter}"
-                                   PassEventArgsToCommand="True"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
                 <i:Interaction.Behaviors>
-                    <local:PasteTextBoxBehavior Command="{Binding Path=PhoneNumberTextInputCommand,
-                                   ElementName=contactControl}"/>
+                    <behavior:PhoneNumberTextBoxBehavior/>
                 </i:Interaction.Behaviors>
             </TextBox>
             <Label Content="Email:"/>
