--- a/src/View/MainWindow.xaml
+++ b/src/View/MainWindow.xaml
@@ -1,24 +1,26 @@
-﻿<Window x:Class="View.Views.MainWindow"
+﻿<Window x:Class="View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:local="clr-namespace:View.Views"
+        xmlns:local="clr-namespace:View"
+        xmlns:control="clr-namespace:View.Control"
+        xmlns:converter="clr-namespace:View.Converter"
         mc:Ignorable="d"
-        Title="Contacts" Height="450" Width="800" Icon="../Resource/Icon.ico">
+        Title="Contacts" Height="450" Width="800" Icon="Resource/Icon.ico">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resource/Styles.xaml"/>
+                <ResourceDictionary Source="Resource/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <local:BoolToVisibilityConverter x:Key="VisibilityConverter"/>
+            <converter:BoolToVisibilityConverter x:Key="VisibilityConverter"/>
             <DataTemplate x:Key="ContactTemplate">
                 <DockPanel LastChildFill="True">
                     <Rectangle Style="{StaticResource {x:Type Rectangle}}" DockPanel.Dock="Left"
                                Width="40px" Height="40px" RadiusX="20px" RadiusY="20px">
                         <Rectangle.Fill>
-                            <ImageBrush ImageSource="../Resource/Avatar.jpg"/>
+                            <ImageBrush ImageSource="Resource/Avatar.jpg"/>
                         </Rectangle.Fill>
                     </Rectangle>
                     <StackPanel VerticalAlignment="Center">
@@ -80,10 +82,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <local:ContactControl Grid.Row="0" Contact="{Binding TempContact}"
-                                  IsReadOnly="{Binding IsActionUnselected}"
-                                  PhoneNumberTextInputCommand="{Binding
-                                  PhoneNumberTextInputCommand}"/>
+            <control:ContactControl Grid.Row="0" Contact="{Binding TempContact}"
+                                  IsReadOnly="{Binding IsActionUnselected}"/>
             <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Top"
                         Margin="106px, 44px, 0px, 0px">
                 <Button Content="Apply" Visibility="{Binding IsActionUnselected, Converter =
